tests/baselines/reference/parserModuleDeclaration4.d.errors.txt
==== tests/cases/compiler/parserModuleDeclaration4.d.ts (1 errors) ====
    module M {
           ~
!!! parserModuleDeclaration4.d.ts(1,8): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
      declare module M1 {
      }
    }